# paper-recommender

./: .gitignore  PHASE1_IMPLEMENTATION_PLAN.md  README.md  TAILWIND_INTEGRATION_PLAN.md  UI_MODERNIZATION_STRATEGY.md  pyproject.toml  tailwind.config.js
src/paperrecommender/: common.py  config.py  data_sources.py  embeddings.py  onboarding.py  paper_recommender.py  recommender.py  ui.py  ui_app.py  vector_store.py
src/paperrecommender/web/: index.html
src/paperrecommender/web/css/: styles.css  tailwind-custom.css
src/paperrecommender/web/js/: app.js  components.js  core.js  views.js
